regression/smv/syntax-errors/syntax1.desc
CORE
syntax1.smv

^file .* line 3: syntax error, unexpected VAR, expecting identifier or quoted string before 'VAR'$
^EXIT=1$
^SIGNAL=0$
--
